<resources>
    <string name="app_name">ScientificCalculator</string>

    <!--what is this for? defult?-->
    <string name="action_settings">Settings</string>
    <!--is it possible use different language for something? -->
    <string name="ac">AC</string>
    <string name="delete">Delete</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="devided">/</string>
    <string name="multiple">*</string>
    <string name="parentheses">()</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="percentage">%</string>
    <string name="root">√￣</string>
    <string name="AC">AC</string>
    <string name="DEL">DEL</string>
    <string name="nega">+/-</string>

</resources>
