<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wood"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:layout_marginTop="30dp"
    android:id="@+id/calculator"
    android:gravity="right">


    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="0"-->
    <!--android:id="@+id/textView"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:textStyle="bold"-->
    <!--android:paddingTop="30dp" />-->


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:gravity="right"
        android:paddingTop="20dp"
        android:textStyle="bold"
        android:textSize="50sp"
        android:paddingBottom="10dp"
        android:password="false"
        android:singleLine="false"
        android:paddingLeft="20dp"
        android:phoneNumber="false"
        android:text="@string/zero"
        android:paddingRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/seven"
        android:id="@+id/button7"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/eight"
        android:id="@+id/button8"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignTop="@+id/button7"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/nine"
        android:id="@+id/button9"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/button8"
        android:layout_toEndOf="@+id/button8" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/multiple"
        android:id="@+id/buttonMultiple"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/button9"
        android:layout_toEndOf="@+id/button9" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/four"
        android:id="@+id/button4"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button1"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/five"
        android:id="@+id/button5"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/button4"
        android:layout_toEndOf="@+id/button4" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/six"
        android:id="@+id/button6"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button3"
        android:layout_toStartOf="@+id/buttonMultiple" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/one"
        android:id="@+id/button1"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button0"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/two"
        android:id="@+id/button2"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_toEndOf="@+id/button1" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="3"
        android:id="@+id/button3"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_toEndOf="@+id/button2" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="0"
        android:id="@+id/button0"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="."
        android:id="@+id/buttonDot"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/button0"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="/"
        android:id="@+id/buttonDevided"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignBottom="@+id/buttonDot"
        android:layout_toEndOf="@+id/buttonDot" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="-"
        android:id="@+id/buttonMinus"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button3"
        android:layout_toEndOf="@+id/button6" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="+"
        android:id="@+id/buttonAdd"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_below="@+id/buttonMinus"
        android:layout_toEndOf="@+id/button3" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="="
        android:id="@+id/buttonEqual"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttonAdd" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="AC"
        android:id="@+id/buttonAC"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_alignTop="@+id/buttonNega"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="+/-"
        android:id="@+id/buttonNega"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button8"
        android:layout_toEndOf="@+id/button7" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="( )"
        android:id="@+id/buttonParenthesis"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/button9"
        android:layout_toEndOf="@+id/buttonNega" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="DEL"
        android:id="@+id/buttonDEL"
        android:textStyle="bold"
        android:textSize="30dp"
        android:layout_above="@+id/buttonMultiple"
        android:layout_toEndOf="@+id/button9" />


</RelativeLayout>